--- a/cts2123_network_defense/fall_2025.html
+++ b/cts2123_network_defense/fall_2025.html
@@ -36,6 +36,7 @@
         }
 
         .rsi {
+          padding-top: 3cap;
           background-color: #f8f9f9;
           text-align: justify;
           border-radius: 2cap;;
@@ -45,23 +46,30 @@
           text-align: left;
         }
 
+        .rsi > h2 {
+          text-align: center;
+        }
+
         .instructor-info {  
           display: grid;
-          background-color: #e9ecef;
           border-radius: 2cap;
-          margin: 0;
+          margin: 20px auto;
+          width: fit-content;
         }
 
         .instructor-info h2 {
+          text-decoration: underline;
           text-align: center;
-          margin: 0;
+          margin: 0 auto;
           height: min-content;
+          width: fit-content;
         }
 
-        .instructor-details { 
-          border: 1px solid blueviolet;
-          text-align: justify;
-          margin-top: 0;
+        .instructor-details {
+          padding-top: 2cap; 
+          padding-bottom: 3cap;
+          margin: 0 auto;
+          width:fit-content;
         }
 
         .instructor-details p {
@@ -105,8 +113,7 @@
 
         <p>&nbsp;</p>
         <div class="rsi">
-          <p style="text-align: center">&nbsp;</p>
-          <h2 style="text-align: center">
+          <h2>
             Welcome to Introduction to Network Security
           </h2>
           <p>
