Fixed alignment issues, added new banner images

--- a/cis2384_mobile_forensics/fall_2025.html
+++ b/cis2384_mobile_forensics/fall_2025.html
@@ -1,4 +1,4 @@
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a
     title="Getting Started"
     href="https://tscfl.instructure.com/courses/63630/modules/551537"
@@ -9,19 +9,19 @@
     ><img
       src="courses/63630/files/12680813/preview/cis_2384_banner.png"
       alt="cis_2384_banner.png"
-      style="width: 100%; height: auto; max-width: 100%; display: block"
+      style="width: 100%; height: auto; max-width: 100%; display: block; margin-left: 0; text-align: left;"
       data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63630/files/12680813"
       data-api-returntype="File"
   /></a>
 </p>
-<h2>Welcome to Mobile Forensics</h2>
-<p>
+<h2 style="text-align: left; margin-left: 0; padding-left: 0;">Welcome to Mobile Forensics</h2>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   Welcome to CIS 2384 - Mobile Forensics! This course will guide you through the
   fascinating world of mobile device forensics, covering everything from basic
   concepts to advanced methodologies. Below, you'll find links to each module to
   help you navigate through the course.
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <span style="font-family: inherit; font-size: 1rem"
     >If you have any questions or need assistance, please don't hesitate</span
   ><span style="font-family: inherit; font-size: 1rem">
@@ -30,8 +30,8 @@
     >&nbsp;great semester!</span
   >
 </p>
-<div>
-  <div>
+<div style="text-align: left; margin-left: 0; padding-left: 0;">
+  <div style="text-align: left; margin-left: 0; padding-left: 0;">
     <span
       >A little about me: I'm originally from Ireland and have been living </span
     ><span
@@ -43,81 +43,81 @@
     >
   </div>
 </div>
-<h2>Course Modules</h2>
-<p>
+<h2 style="text-align: left; margin-left: 0; padding-left: 0;">Course Modules</h2>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550797/expand"
     >Getting Started</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550798/expand"
     >Module 1: Introduction to Mobile Forensics</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550799/expand"
     >Module 2: Mobile Device Architecture</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550800/expand"
     >Module 3: Mobile Forensics Methodologies</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550801/expand"
     >Module 4: Data Acquisition</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550802/expand"
     >Module 5: iOS Forensics</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550803/expand"
     >Module 6: Android Forensics</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550804/expand"
     >Module 7: Cloud and App Forensics</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550805/expand"
     >Module 8: IoT and Wearable Device Forensics</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550806/expand"
     >Module 9: Forensic Analysis and Reporting</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550807/expand"
     >Module 10: Anti-Forensics and Countermeasures</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550808/expand"
     >Module 11: Legal and Ethical Issues</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550809/expand"
     >Module 12: Emerging Trends</a
   >
 </p>
-<p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <a href="https://tscfl.instructure.com/courses/63286/modules/550810/expand"
     >Module 13: Final Project</a
   >
 </p>
-<h2>Course Information</h2>
-<p><strong>Instructor:</strong> Jim Quinn</p>
-<p><strong>Contact:</strong> jim.quinn@gmail.com</p>
-<p>
+<h2 style="text-align: left; margin-left: 0; padding-left: 0;">Course Information</h2>
+<p style="text-align: left; margin-left: 0; padding-left: 0;"><strong>Instructor:</strong> Jim Quinn</p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;"><strong>Contact:</strong> jim.quinn@gmail.com</p>
+<p style="text-align: left; margin-left: 0; padding-left: 0;">
   <strong>Office Hours:</strong> MW: 08:00 - 12:30, TR: 08:00 - 10:30 &amp;
   12:00 - 14:00
 </p>
