--- a/cts2123_network_defense/fall_2025.html
+++ b/cts2123_network_defense/fall_2025.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CTS 2123 - Network Defense</title>
+    <title>CIS 2352</title>
   </head>
 
   <body>
@@ -39,7 +39,7 @@
           padding-top: 3cap;
           background-color: #f8f9f9;
           text-align: justify;
-          border-radius: 2cap;;
+          border-radius: 2cap;
         }
 
         .rsi > p {
@@ -50,11 +50,13 @@
           text-align: center;
         }
 
-        .instructor-info {  
+        .instructor-info {
           display: grid;
           border-radius: 2cap;
           margin: 20px auto;
           width: fit-content;
+          background-color: #f8f9f9;
+          text-align: left;
         }
 
         .instructor-info h2 {
@@ -62,14 +64,14 @@
           text-align: center;
           margin: 0 auto;
           height: min-content;
-          width: fit-content;
+          width: 100%;
         }
 
         .instructor-details {
-          padding-top: 2cap; 
+          padding-top: 2cap;
           padding-bottom: 3cap;
           margin: 0 auto;
-          width:fit-content;
+          width: fit-content;
         }
 
         .instructor-details p {
@@ -77,125 +79,300 @@
         }
 
         .useful-links {
-          border: solid 1px #ccc;
+          background-color: #f8f9f9;
+        }
+
+        .course-modules {
+          background-color: #f8f9f9;
+        }
+
+        h2 {
+          background-color: #ccffff;
         }
       </style>
 
-      <div class="content-body">
-        <img
-          src="cnd.png"
-          alt="Network Defense and Countermeasures"
-          loading="lazy"
-        />
-        <p class="start-here">
-          <a
-            href="https://tscfl.instructure.com/courses/56341/modules/451603"
-            target="_blank"
-            title="Start Here"
-            data-course-type="modules"
-            data-published="true"
-            data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/56341/modules/451603"
-          >
-            Students Start Here
-          </a>
-        </p>
-        <p class="ec-council">
-          <a
-            href="https://eccouncil.learnondemand.net/LabSeries/19424"
-            target="_blank"
-            title="EC-Council"
-            data-api-endpoint="https://eccouncil.learnondemand.net/LabSeries/19424"
-            data-api-returntype="External Link"
-          >
-            <img src="EC-Council.png" alt="EC-Council" loading="lazy" />
-          </a>
-        </p>
-
-        <p>&nbsp;</p>
-        <div class="rsi">
-          <h2>
-            Welcome to Introduction to Network Security
-          </h2>
-          <p>
-            Welcome to CTS 2123 - Network Defense and Counter Measures! This
-            course is designed to provide students with the fundamental skills
-            needed to analyze the internet and external security threats against
-            a network and to implement security mechanisms to protect an
-            organization's information. The course helps students to evaluate
-            network and internet issues and provides security solutions such as
-            the designing security policy, troubleshooting networks, and digital
-            signature.&nbsp;
+      <div id="content-body">
+        <div style="text-align: center">
+          <img
+            src="courses/63633/files/12681021/preview/cts2123_network_defense.png"
+            alt="cts2123_network_defense.png"
+            style="width: 100%; height: auto; max-width: 100%; display: block"
+            data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/files/12681021"
+            data-api-returntype="File"
+          /><br />
+          <p class="ec-council">
+            <a
+              title="EC-Council"
+              href="https://eccouncil.learnondemand.net/LabSeries/19424"
+              target="_blank"
+              rel="noopener"
+              data-api-endpoint="https://eccouncil.learnondemand.net/LabSeries/19424"
+              data-api-returntype="External Link"
+            >
+              <img
+                src="courses/63633/files/12681021/preview/EC-Council.png"
+                alt="EC-Council"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/files/12351434"
+                data-api-returntype="File"
+            /></a>
           </p>
-          <p>
-            If you have any questions or need assistance, please don't hesitate
-            to reach out during my office hours or via email. Let's make this a
-            great semester!
-          </p>
-          <p>
-            A little about me: I'm originally from Ireland and have been living
-            in Florida for the past 25 years. I'm married with two kids and a
-            dog. I have 20 years of industry experience as a software developer
-            and received my master's degree in Cybersecurity in 2018.
-          </p>
-
-          <div class="instructor-info"><!--class="instructor-info">-->
-
-            <h2>Instructor Information</h2>
-            <div class="instructor-details">
-
-              <p><strong>Instructor:</strong> Jim Quinn</p>
-              <p>
-                <strong>Contact:</strong>
-                <a href="mailto:jim.quinn@tsc.fl.edu" target="_blank">
-                  jim.quinn@tsc.fl.edu
+          <p>&nbsp;</p>
+          <div class="rsi" style="max-width: fit-content; text-align: left;">
+            <h2 style="max-width: fit-content; text-align: left;">Welcome to Introduction to Network Security</h2>
+            <p>
+              Welcome to CTS 2123 - Network Defense and Counter Measures! This
+              course is designed to provide students with the fundamental skills
+              needed to analyze the internet and external security threats
+              against a network and to implement security mechanisms to protect
+              an organization's information. The course helps students to
+              evaluate network and internet issues and provides security
+              solutions such as the designing security policy, troubleshooting
+              networks, and digital signature.&nbsp;
+            </p>
+            <p>
+              If you have any questions or need assistance, please don't
+              hesitate to reach out during my office hours or via email. Let's
+              make this a great semester!
+            </p>
+            <p>
+              A little about me: I'm originally from Ireland and have been
+              living in Florida for the past 25 years. I'm married with two kids
+              and a dog. I have 20 years of industry experience as a software
+              developer and received my master's degree in Cybersecurity in
+              2018.
+            </p>
+            </div>
+            <div class="rsi" style="max-width: 100%; text-align: left;">
+              <h2>Instructor Information</h2>
+              <div  style="max-width: fit-content; text-align: left;">
+                <p><strong>Instructor:</strong> Jim Quinn</p>
+                <p>
+                  <strong>Contact:</strong>
+                  <a
+                    href="mailto:jim.quinn@tsc.fl.edu"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    jim.quinn@tsc.fl.edu
+                  </a>
+                </p>
+                <p><strong>Phone: </strong>(850) 201-8966</p>
+                <p><strong>Office Hours:</strong> MW: 08:00 - 12:30, TR: 08:00 - 10:30 &amp; 12:00 - 14:00</p>
+              </div>
+            </div>
+          </div>
+          <div class="rsi" style="max-width: 100%; text-align: left;">
+            <h2>Useful Links</h2>
+            <ul style="list-style-type: none; padding: 0">
+              <li>
+                <a
+                  title="Course Modules"
+                  href="https://tscfl.instructure.com/courses/63633/modules#module_451603"
+                  target="_blank"
+                  rel="noopener"
+                  data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/56341/modules/451603"
+                  data-api-returntype="Module"
+                >
+                  Course Modules
                 </a>
-              </p>
-              <p><strong>Phone: </strong>(850) 201-8966</p>
-              <p><strong>Office Hours:</strong> TDB</p>
+              </li>
+              <li>
+                <a
+                  title="Course Announcements"
+                  href="https://tscfl.instructure.com/courses/63633/announcements"
+                  target="_blank"
+                  rel="noopener"
+                  data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/56341/announcements"
+                  data-api-returntype="Announcement"
+                >
+                  Course Announcements
+                </a>
+              </li>
+              <li>
+                <a
+                  title="FAQs"
+                  href="https://tscfl.instructure.com/courses/63633/modules#module_451603"
+                  target="_blank"
+                  rel="noopener"
+                  data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/56341/modules/451603"
+                  data-api-returntype="Module"
+                >
+                  FAQs
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="rsi" style="max-width: 100%; text-align: left;">
+            <h2 class="content-title">Course Modules</h2>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                target="_blank"
+                rel="noopener"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+              >
+                Network Attacks and Defense Strategies
+              </a>
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                target="_blank"
+                rel="noopener"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+              >
+                Administrative Network Security
+              </a>
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Technical Network Security</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Network Perimeter Security</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Endpoint Security - Windows Systems</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Endpoint Security - Linux Systems</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Endpoint Security - Mobile Devices</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Endpoint Security - IOT Devices</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Administrative Application Security</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Data Security</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Enterprise Virtual Network Security</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Enterprise Cloud Network Security</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Enterprise Wireless Network Security</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Network Traffic Monitoring and Analysis</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Network Logs Monitoring and Analysis</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Incident Response and Forensic Investigation</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Business Continuity and Disaster Recovery</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Risk Anticipation with Risk Management</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Threat Assessment with Attack Surface Analysis</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://tscfl.instructure.com/courses/63633/modules/565791"
+                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/63633/modules/565791"
+                data-api-returntype="Module"
+                >Threat Prediction with Cyber Threat Intelligence</a
+              >
+            </p>
           </div>
         </div>
-      </div>  
-        <!-- end of rsi -->
-
-        <div class="useful-link">
-          <h2>Useful Links</h2>
-          <ul style="list-style-type: none; padding: 0;">
-            <li>
-              <a
-                href="https://tscfl.instructure.com/courses/56341/modules#module_451603"
-                target="_blank"
-                title="Course Modules"
-                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/56341/modules/451603"
-                data-api-returntype="Module"
-              >
-                Course Modules
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://tscfl.instructure.com/courses/56341/announcements"
-                target="_blank"
-                title="Course Announcements"
-                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/56341/announcements"
-                data-api-returntype="Announcement"
-              >
-                Course Announcements
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://tscfl.instructure.com/courses/56341/modules#module_451603"
-                target="_blank"
-                title="FAQs"
-                data-api-endpoint="https://tscfl.instructure.com/api/v1/courses/56341/modules/451603"
-                data-api-returntype="Module"
-              >
-                FAQs
-              </a>
-            </li>
-          </ul>
       </div>
-      <!-- end of content-body -->
     </div>
   </body>
 </html>
